Changed file upload labels in Admin settings

--- a/app/views/admin/settings.html.erb
+++ b/app/views/admin/settings.html.erb
@@ -29,13 +29,13 @@
           </div>
         </div>
         <div class="form-group row">
-          <%= form.label :header_pic, class: 'col-sm-2 col-form-label text-right' %>
+          <div class="col-sm-2 col-form-label text-right">Header pic</div>
           <div class="col-sm-7">
             <%= form.file_field :header_pic, class: 'file-field-box' %>
           </div>
         </div>
         <div class="form-group row">
-          <%= form.label :profile_pic, class: 'col-sm-2 col-form-label text-right' %>
+          <div class="col-sm-2 col-form-label text-right">Profile pic</div>
           <div class="col-sm-7">
             <%= form.file_field :profile_pic, class: 'file-field-box' %>
           </div>
